--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+2
+  webfeed: ^0.4.2
+  intl: ^0.15.8
+  webview_flutter: ^0.3.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
