--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   webfeed: ^0.4.2
   intl: ^0.15.8
   webview_flutter: ^0.3.9
+  #url_launcher: ^5.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
